--- a/ChatDemoUI3.0/res/values/strings.xml
+++ b/ChatDemoUI3.0/res/values/strings.xml
@@ -106,4 +106,5 @@
 
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="toast_nick_not_modify">nick name not modify</string>
 </resources>
