--- a/ChatDemoUI3.0/res/values-zh/strings.xml
+++ b/ChatDemoUI3.0/res/values-zh/strings.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <string name="toast_nick_not_modify">昵称未修改</string>
+    <string name="serach_user_fail">用户不存在</string>
 </resources>
