--- a/ChatDemoUI3.0/res/values/strings.xml
+++ b/ChatDemoUI3.0/res/values/strings.xml
@@ -107,4 +107,5 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="error_not_find_user">not find user</string>
+    <string name="addcontact_friented_fail">add contact fail</string>
 </resources>
