礼物支付账户余额不足提示

--- a/ChatDemoUI3.0/res/values/strings.xml
+++ b/ChatDemoUI3.0/res/values/strings.xml
@@ -5,7 +5,7 @@
     <string name="app_name">微信</string>
     <string name="contacts">通讯录</string>
     <string name="me">我</string>
-    <string name="discover">发现</string>
+    <string name="living">直播</string>
     <string name="recommended_friends">新的朋友</string>
     <string name="group_chats">群聊</string>
     <string name="official_accounts">公众号</string>
